Fix input align

--- a/assets/base.css
+++ b/assets/base.css
@@ -1745,6 +1745,7 @@ details[open] > .share-button__fallback {
 .customer .field input:-webkit-autofill ~ label {
   font-size: 1rem;
   top: calc(var(--inputs-border-width) + 0.5rem);
+  left: calc(var(--inputs-border-width) + 1.5rem);
   letter-spacing: 0.04rem;
 }
 
